# Physical-Modelling-Fan

./: CMakeLists.txt  LICENSE
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/PhysicalModellingFan/: PluginEditor.h  PluginProcessor.h
plugin/include/PhysicalModellingFan/LookAndFeel/: jr_StyleSheet.h
plugin/include/PhysicalModellingFan/components/audio/: ApvtsListener.h  Motor_Envelope.h  jr_Delay.h  jr_Machine.h  jr_Motor_Envelope.h  jr_PolyBLEP_Oscillators.h  jr_SimpleFan.h
plugin/include/PhysicalModellingFan/components/gui/: MirrorSliderAttachment.h  PresetPanel.h  jr_FanControls.h  jr_SharedControls.h
plugin/include/PhysicalModellingFan/components/services/: jr_PresetManager.h
plugin/include/PhysicalModellingFan/utils/: jr_juceUtils.h  jr_utils.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/source/components/audio/: jr_Machine.cpp  jr_PolyBLEP_Oscillators.cpp  jr_SimpleFan.cpp
plugin/source/components/gui/: MirrorSliderAttachment.cpp
plugin/source/components/services/: jr_PresetManager.cpp
plugin/source/utils/: jr_utils.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
